manifests/resources/istio/gateway/ingress/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: services-ingress
spec:
  selector:
    app.kubernetes.io/instance: ingress
    app.kubernetes.io/name: istio-gateway
  servers:
  - port:
      name: https
      number: 443
      protocol: HTTPS
    hosts:
    - "*.tomnowak.dev"
    tls:
      credentialName: services-ingress-tls
      mode: MUTUAL
